# compton-tde-x

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  c2.c  c2.h  changelog.md  common.h  compton-tde_1.0_amd64.deb  compton.c  compton.h  compton_config.h  compton_config.h.cmake  create_deb.sh  install_deps.sh  opengl.c  opengl.h
man/: compton-tde-trans.1.html  compton-tde.1.html  compton-trans.1  compton.1
myconfig/: compton-tde.conf
package_build/DEBIAN/: control
